# genpdfi

./: Cargo.toml
.agents/skills/genpdfi/agents/: openai.yaml
.claude/: ecc-tools.json  identity.json
.claude/homunculus/instincts/inherited/: genpdfi-instincts.yaml
.claude/skills/genpdfi/: SKILL.md
.codex/: AGENTS.md
src/: error.rs  fonts.rs  lib.rs  render.rs  style.rs  subsetting.rs
