[package]
name = "genpdfi"
version = "0.2.7"
authors = ["Robin Krahl <robin.krahl@ireas.org>", "Ismael Sh <me@theiskaa.com>"]
edition = "2018"
description = "User-friendly PDF generator written in pure Rust"
homepage = "https://github.com/theiskaa/genpdfi"
repository = "https://github.com/theiskaa/genpdfi"
keywords = ["pdf", "text", "layout"]
categories = ["text-processing"]
license = "Apache-2.0 OR MIT"
exclude = [".builds/*"]
readme = "README.md"

[dependencies]
lopdf = "0.31"
rusttype = "0.8"
subsetter = "0.2.3"
ttf-parser = "0.24"

[dependencies.image]
version = "0.24.9"
default-features = false
optional = true

[dependencies.hyphenation]
version = "0.8"
optional = true

[dependencies.printpdf]
version = "0.8.0"
default-features = false

[dependencies.derive_more]
version = "0.99"
default-features = false
features = ["add", "add_assign", "from", "into", "mul", "mul_assign", "sum"]

[dev-dependencies.float-cmp]
version = "0.8"
default-features = false
features = ["std"]

[dev-dependencies.hyphenation]
version = "0.8"
features = ["embed_en-us"]

[features]
default = []
images = ["image", "printpdf/jpeg", "printpdf/png", "printpdf/bmp", "image/jpeg", "image/png"]

[package.metadata.docs.rs]
all-features = true
